Wed Oct 17 08:32:46 2012  Koichi Sasada  <ko1@atdot.net>

	* compile.c (compile_dstr_fragments): use `putobject' instead of
	  `putstring' for all of strings used by NODE_DSTR because
	  ruby users can not grab this string.
	  For example, the string object of "baz" in "foo#{bar}baz"
	  is located by `putobject' (users can not touch "baz" object
	  directly). This change reduces GC pressure.
	  This improvement is suggested by Aaron Patterson.

Wed Oct 17 08:02:57 2012  Koichi Sasada  <ko1@atdot.net>

	* thread.c (rb_threadptr_interrupt_mask): fix to check interrupt
	  after interrupt_mask changed.

Wed Oct 17 06:42:47 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_method): fix to return value immediately.
	  Remove CHECK_INTS() after that method dispatch.

Wed Oct 17 06:25:56 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* hash.c (initialize_copy): copy the underlying st_table on dup,
	  rather than copying the hash key by key. [ruby-core:48009]

	* test/ruby/test_hash.rb: relevant tests for initialize_copy

Wed Oct 17 06:17:44 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_iseq_setup_2): separate tailcall and normal
	  method frame setup functions.
	  Add checking interrupts at the tailcall setup function.

Wed Oct 17 05:35:37 2012  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_vm1_yield.rb: add a benchmark to measure `yield'
	  (invoke empty block) performance.

	* benchmark/bm_vm2_method_with_block.rb: add a benchmark to measure
	  method invocation with empty block.

Wed Oct 17 05:05:07 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_invoke_block): vm_caller_setup_args() can skip
	  when splat flag is not set.

Wed Oct 17 01:53:47 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_getivar, vm_setivar): support index inline cache
	  with rb_call_info_t to speedup `attr' getter and setter.
	  Cached index is stored in rb_call_info_t::aux::index.